--- a/.github/workflows/autolabel.yaml
+++ b/.github/workflows/autolabel.yaml
@@ -6,7 +6,7 @@ on:
       - opened
 jobs:
   label_issues:
-    runs-on: ubuntu-latest
+    runs-on: k8s-nano
     permissions:
       issues: write
     steps:
