--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -60,7 +60,7 @@ jobs:
   token:
     outputs:
       token: ${{ steps.generate.outputs.token }}
-    runs-on: ubuntu-latest
+    runs-on: k8s-nano
     steps:
       - name: Generate
         id: generate
@@ -73,7 +73,7 @@ jobs:
   find-tf-releases:
     outputs:
       releases: ${{ steps.find.outputs.releases }}
-    runs-on: ubuntu-latest
+    runs-on: k8s-nano
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -85,7 +85,7 @@ jobs:
   list-examples:
     outputs:
       examples: ${{ steps.list.outputs.examples }}
-    runs-on: ubuntu-latest
+    runs-on: k8s-nano
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -99,7 +99,7 @@ jobs:
     outputs:
       status: ${{ steps.status.outputs.status }}
     needs: [ "token", "find-tf-releases", "list-examples" ]
-    runs-on: ubuntu-latest
+    runs-on: k8s-large
     continue-on-error: true
     permissions:
       id-token: write
@@ -170,7 +170,7 @@ jobs:
     outputs:
       status: ${{ steps.status.outputs.status }}
     needs: [ "token", "find-tf-releases", "list-examples" ]
-    runs-on: ubuntu-latest
+    runs-on: k8s-large
     continue-on-error: true
     permissions:
       id-token: write
@@ -242,7 +242,7 @@ jobs:
           exit 1
 
   report:
-    runs-on: ubuntu-latest
+    runs-on: k8s-nano
     needs: [ "e2e", "upgrade" ]
     if: ${{ github.ref_name == 'main' && (needs.e2e.outputs.status == 'failure' || needs.upgrade.outputs.status == 'failure') }}
     steps:
@@ -267,7 +267,7 @@ jobs:
 
   # Delete any leftover service that might have failed deleting
   cleanup:
-    runs-on: ubuntu-latest
+    runs-on: k8s-small
     needs: [ "e2e", "upgrade", "token" ]
     if: always()
     continue-on-error: true
