--- a/.github/workflows/fmt.yaml
+++ b/.github/workflows/fmt.yaml
@@ -9,7 +9,7 @@ defaults:
 
 jobs:
   fmt:
-    runs-on: [dataplane, self-hosted, linux, x64, small]
+    runs-on: k8s-medium
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -25,6 +25,3 @@ jobs:
 
       - name: Check for changes
         run: git diff --exit-code
-
-
-
