fix(ci): specify main branch in a bump-examples job so it always pushes against main

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -324,6 +324,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
+          ref: "main"
           ssh-key: ${{secrets.DEPLOY_SSH_PRIVATE_KEY }}
 
       - name: Setup go
