--- a/.github/actions/cleanup-aws/action.yaml
+++ b/.github/actions/cleanup-aws/action.yaml
@@ -16,9 +16,10 @@ runs:
   steps:
     - name: Checkout
       uses: actions/checkout@v4
-      ref: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.ref }}
-      sparse-checkout: |
-        .github/actions/cleanup-aws/cleanup.sh
+      with:
+        ref: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.ref }}
+        sparse-checkout: |
+          .github/actions/cleanup-aws/cleanup.sh
 
     - name: Configure AWS credentials
       id: aws-auth
