--- a/.github/actions/cleanup-aws/action.yaml
+++ b/.github/actions/cleanup-aws/action.yaml
@@ -19,7 +19,7 @@ runs:
       with:
         ref: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.ref }}
         sparse-checkout: |
-          .github/actions/cleanup-aws/cleanup.sh
+          .github/actions/cleanup-aws
 
     - name: Configure AWS credentials
       id: aws-auth
