chore(cleanup): move scripts to files (#364)

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -67,6 +67,7 @@ jobs:
         run: |
           # Number of seconds since January first 2025.
           token=$(( $(date +%s) - $(date -d "Jan 1, 2025 00:00:00" +%s) ))
+          echo "token=${token}"
           echo "token=${token}" >> $GITHUB_OUTPUT
 
   # Find the most recent release of terraform CLI
@@ -77,6 +78,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - uses: ./.github/actions/find-tf-releases
         id: find
         with:
@@ -89,6 +91,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - uses: ./.github/actions/list-examples
         id: list
         with:
@@ -114,6 +117,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - name: Generate test name
         id: name
         run: |
@@ -152,6 +156,7 @@ jobs:
           skip_build: "false"
           region: ${{ contains(fromJSON('["hipaa", "pci"]'), matrix.test.name) && steps.credentials.outputs.compliance_region || steps.credentials.outputs.region }}
           aws_role_arn: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
+
       - name: Cleanup
         if: ${{ always() && matrix.test.cloud == 'aws' }}
         uses: ./.github/actions/cleanup-aws
@@ -159,6 +164,7 @@ jobs:
           service_name: ${{steps.name.outputs.test_name}}
           aws_region: ${{ steps.credentials.outputs.region }}
           aws_role_arn: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
+
       - name: Mark error
         id: status
         if: failure()
