use binary instead of action

--- a/.github/workflows/azure-test.yaml
+++ b/.github/workflows/azure-test.yaml
@@ -21,9 +21,4 @@ jobs:
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
     - name: Azure CLI script
-      uses: azure/cli@v2
-      with:
-        azcliversion: latest
-        inlineScript: |
-          az account show
-          # You can write your Azure CLI inline scripts here.
+      run: az account show
