--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -103,6 +103,7 @@ jobs:
       status: ${{ steps.status.outputs.status }}
     needs: [ "token", "find-tf-releases", "list-examples" ]
     runs-on: k8s-large
+    environment: default
     continue-on-error: true
     permissions:
       id-token: write
@@ -160,13 +161,22 @@ jobs:
           azure_tenant_id: ${{ secrets.AZURE_TENANT_ID }}
           azure_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Cleanup
+      - name: Cleanup AWS
         if: ${{ always() && matrix.test.cloud == 'aws' }}
         uses: ./.github/actions/cleanup-aws
         with:
           service_name: ${{steps.name.outputs.test_name}}
           aws_region: ${{ steps.credentials.outputs.region }}
           aws_role_arn: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
+
+      - name: Cleanup Azure
+        if: ${{ always() && matrix.test.cloud == 'azure' }}
+        uses: ./.github/actions/cleanup-azure
+        with:
+          service_name: ${{steps.name.outputs.test_name}}
+          azure_client_id: ${{ secrets.AZURE_CLIENT_ID }}
+          azure_tenant_id: ${{ secrets.AZURE_TENANT_ID }}
+          azure_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Mark error
         id: status
