--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -5,49 +5,49 @@ on:
     inputs:
       api_env:
         type: choice
-        default: "Production"
+        default: Production
         options:
           - Production
           - Staging
           - Development
           - Custom
-        description: "What API ENV to use as backend."
+        description: What API ENV to use as backend.
       api_url:
         type: string
         default: ""
-        description: "(Optional) Full URL of the API service to use when API Env is 'Custom'"
+        description: (Optional) Full URL of the API service to use when API Env is 'Custom'
       organization_id:
         type: string
         default: ""
-        description: "(Optional) Organization ID to use when API Env is 'Custom'"
+        description: (Optional) Organization ID to use when API Env is 'Custom'
       api_key_id:
         type: string
         default: ""
-        description: "(Optional) API Key ID to use when API Env is 'Custom'"
+        description: (Optional) API Key ID to use when API Env is 'Custom'
       api_key_secret:
         type: string
         default: ""
-        description: "(Optional) API Key secret to use when API Env is 'Custom'"
+        description: (Optional) API Key secret to use when API Env is 'Custom'
       aws_region:
         type: string
         default: ""
-        description: "(Optional) AWS region to run tests in when API Env is 'Custom'"
+        description: (Optional) AWS region to run tests in when API Env is 'Custom'
       azure_region:
         type: string
         default: ""
-        description: "(Optional) Azure region to run tests in when API Env is 'Custom'"
+        description: (Optional) Azure region to run tests in when API Env is 'Custom'
       gcp_region:
         type: string
         default: ""
-        description: "(Optional) GCP region to run tests in when API Env is 'Custom'"
+        description: (Optional) GCP region to run tests in when API Env is 'Custom'
       run_upgrade_test:
         type: boolean
         default: false
-        description: "If checked, additionally create service using latest stable version, then upgrade to the current version"
+        description: If checked, additionally create service using latest stable version, then upgrade to the current version
       upgrade_from:
         type: string
         default: ""
-        description: "What version to test upgrade from. Including leading 'v'. Example 'v2.3.0'. Defaults to latest stable release."
+        description: What version to test upgrade from. Including leading 'v'. Example 'v2.3.0'. Defaults to latest stable release.
   schedule:
     - cron: "0 7 * * *"
 
@@ -59,16 +59,16 @@ jobs:
   # Generate a random token to tag the tests with
   token:
     outputs:
-      token: ${{ steps.generate.outputs.token }}
+      token: ${{ steps.generate_token.outputs.token }}
     runs-on: k8s-nano
     steps:
-      - name: Generate
-        id: generate
+      - name: Generate token
+        id: generate_token
         run: |
           # Number of seconds since January first 2025.
           token=$(( $(date +%s) - $(date -d "Jan 1, 2025 00:00:00" +%s) ))
           echo "token=${token}"
-          echo "token=${token}" >> $GITHUB_OUTPUT
+          echo "token=${token}" >> "${GITHUB_OUTPUT}"
 
   # Find the most recent release of terraform CLI
   find-tf-releases:
@@ -79,7 +79,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - uses: ./.github/actions/find-tf-releases
+      - name: Find TF releases
+        uses: ./.github/actions/find-tf-releases
         id: find
         with:
           count: '3'
@@ -92,10 +93,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - uses: ./.github/actions/list-examples
+      - name: List Examples
+        uses: ./.github/actions/list-examples
         id: list
         with:
-          ignore: 'pci'
+          ignore: pci
 
   # Run e2e tests
   e2e:
@@ -119,10 +121,15 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Generate test name
-        id: name
-        run: |
-          echo "test_name=[e2e]-${{ matrix.test.name }}-${{ matrix.tf_release }}-${{ matrix.test.cloud }}-${{ needs.token.outputs.token }}" >> $GITHUB_OUTPUT
+      - name: Generate service name
+        uses: ./.github/actions/generate-service-name
+        id: service_name
+        with:
+          test_type: e2e
+          test_name: ${{ matrix.test.name }}
+          tf_release: ${{ matrix.tf_release }}
+          cloud_provider: ${{ matrix.test.cloud }}
+          token: ${{ needs.token.outputs.token }}
 
       - name: Get API details for env
         id: credentials
@@ -141,7 +148,7 @@ jobs:
         run: |
           bash ./.github/scripts/set_api_env.sh ${{ matrix.test.cloud }}
 
-      - name: e2e
+      - name: E2E
         id: e2e
         uses: ./.github/actions/e2e
         with:
@@ -149,7 +156,7 @@ jobs:
           organization_id: ${{ steps.credentials.outputs.organization_id }}
           token_key: ${{ steps.credentials.outputs.api_key_id }}
           token_secret: ${{ steps.credentials.outputs.api_key_secret }}
-          service_name: ${{steps.name.outputs.test_name}}
+          service_name: ${{steps.service_name.outputs.service_name}}
           test_name: ${{ matrix.test.name }}
           tf_release: ${{ matrix.tf_release }}
           cloud_provider: ${{ matrix.test.cloud }}
@@ -161,19 +168,14 @@ jobs:
           azure_tenant_id: ${{ secrets.AZURE_TENANT_ID }}
           azure_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Cleanup AWS
-        if: ${{ always() && matrix.test.cloud == 'aws' }}
-        uses: ./.github/actions/cleanup-aws
+      - name: Cleanup Cloud
+        if: always()
+        uses: ./.github/actions/cleanup-cloud
         with:
-          service_name: ${{steps.name.outputs.test_name}}
+          cloud_provider: ${{ matrix.test.cloud }}
+          service_name: ${{steps.service_name.outputs.service_name}}
           aws_region: ${{ steps.credentials.outputs.region }}
           aws_role_arn: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
-
-      - name: Cleanup Azure
-        if: ${{ always() && matrix.test.cloud == 'azure' }}
-        uses: ./.github/actions/cleanup-azure
-        with:
-          service_name: ${{steps.name.outputs.test_name}}
           azure_client_id: ${{ secrets.AZURE_CLIENT_ID }}
           azure_tenant_id: ${{ secrets.AZURE_TENANT_ID }}
           azure_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
@@ -182,7 +184,7 @@ jobs:
         id: status
         if: failure()
         run: |
-          echo "status=failure" >> $GITHUB_OUTPUT
+          echo "status=failure" >> "${GITHUB_OUTPUT}"
           exit 1
 
   upgrade:
@@ -204,10 +206,16 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Generate test name
-        id: name
-        run: |
-          echo "test_name=[upg]-${{ matrix.test.name }}-${{ matrix.tf_release }}-${{ matrix.test.cloud }}-${{ needs.token.outputs.token }}" >> $GITHUB_OUTPUT
+
+      - name: Generate service name
+        uses: ./.github/actions/generate-service-name
+        id: service_name
+        with:
+          test_type: upg
+          test_name: ${{ matrix.test.name }}
+          tf_release: ${{ matrix.tf_release }}
+          cloud_provider: ${{ matrix.test.cloud }}
+          token: ${{ needs.token.outputs.token }}
 
       - name: Get API details for env
         id: credentials
@@ -235,7 +243,7 @@ jobs:
           organization_id: ${{ steps.credentials.outputs.organization_id }}
           token_key: ${{ steps.credentials.outputs.api_key_id }}
           token_secret: ${{ steps.credentials.outputs.api_key_secret }}
-          service_name: ${{steps.name.outputs.test_name}}
+          service_name: ${{steps.service_name.outputs.service_name}}
           test_name: ${{ matrix.test.name }}
           tf_release: ${{ matrix.tf_release }}
           cloud_provider: ${{ matrix.test.cloud }}
@@ -245,19 +253,23 @@ jobs:
           region: ${{ contains(fromJSON('["hipaa", "pci"]'), matrix.test.name) && steps.credentials.outputs.compliance_region || steps.credentials.outputs.region }}
           aws_role_arn: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
 
-      - name: Cleanup
-        if: ${{ always() && matrix.test.cloud == 'aws' }}
-        uses: ./.github/actions/cleanup-aws
+      - name: Cleanup Cloud
+        if: always()
+        uses: ./.github/actions/cleanup-cloud
         with:
-          service_name: ${{steps.name.outputs.test_name}}
+          cloud_provider: ${{ matrix.test.cloud }}
+          service_name: ${{steps.service_name.outputs.service_name}}
           aws_region: ${{ steps.credentials.outputs.region }}
           aws_role_arn: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
+          azure_client_id: ${{ secrets.AZURE_CLIENT_ID }}
+          azure_tenant_id: ${{ secrets.AZURE_TENANT_ID }}
+          azure_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Mark error
         id: status
         if: failure()
         run: |
-          echo "status=failure" >> $GITHUB_OUTPUT
+          echo "status=failure" >> "${GITHUB_OUTPUT}"
           exit 1
 
   report:
@@ -309,7 +321,7 @@ jobs:
           gcp_region: "${{ inputs.gcp_region }}"
         run: |
           bash ./.github/scripts/set_api_env.sh
-      - name: Cleanup
+      - name: Cleanup ClickHouse
         uses: ./.github/actions/cleanup-clickhouse
         with:
           api_url: ${{ steps.credentials.outputs.api_url }}
