--- a/.github/actions/e2e/action.yaml
+++ b/.github/actions/e2e/action.yaml
@@ -172,13 +172,13 @@ runs:
       name: Upgrade test - Run terraform using latest stable version
       run: |
         git checkout tags/${{ steps.get_latest_stable_release.outputs.tag }}
-        git checkout main -- .github/
         if [ $(find examples/full/${{ inputs.test_name }}/${{ inputs.cloud_provider }} -name "*.tf" -type f 2>/dev/null | wc -l) -gt 0 ]
         then
           echo "::group::Run terraform using latest stable version"
         else
           echo "::group::Skipping upgrade E2E test as it does not exist for cloud provider ${{ inputs.cloud_provider }} and version ${{ steps.get_latest_stable_release.outputs.tag }}"
           echo "SKIP_E2E_TEST=true" >> "$GITHUB_ENV"
+          git checkout ${{ github.ref }}
           exit 0
         fi
         cd "examples/full/${{ inputs.test_name }}/${{ inputs.cloud_provider }}"
@@ -196,6 +196,8 @@ runs:
         terraform init -input=false
         terraform plan -no-color -var-file=variables.tfvars
         terraform apply -no-color -auto-approve -var-file=variables.tfvars
+
+        git checkout ${{ github.ref }}
 
         echo "::endgroup::"
 
