--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -101,8 +101,6 @@ jobs:
 
   # Run e2e tests
   e2e:
-    outputs:
-      status: ${{ steps.status.outputs.status }}
     needs: [ "token", "find-tf-releases", "list-examples" ]
     runs-on: k8s-large
     environment: default
@@ -180,16 +178,23 @@ jobs:
           azure_tenant_id: ${{ secrets.AZURE_TENANT_ID }}
           azure_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Mark error
-        id: status
-        if: failure()
+      - name: Save status
+        if: always()
         run: |
-          echo "status=failure" >> "${GITHUB_OUTPUT}"
-          exit 1
+          JOB_ID="${{ matrix.test.name }}"
+          STATUS=$([[ "${{ job.status }}" == "success" ]] && echo "pass" || echo "fail")
+          mkdir -p status
+          echo "$JOB_ID:$STATUS" > status/$JOB_ID.txt
+          echo "Saved: $JOB_ID = $STATUS"
+
+      - name: Upload status
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: status-${{ matrix.test.name }}
+          path: status/
 
   upgrade:
-    outputs:
-      status: ${{ steps.status.outputs.status }}
     needs: [ "token", "find-tf-releases", "list-examples" ]
     runs-on: k8s-large
     environment: default
@@ -269,20 +274,56 @@ jobs:
           azure_tenant_id: ${{ secrets.AZURE_TENANT_ID }}
           azure_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Mark error
-        id: status
-        if: failure()
+      - name: Save status
+        if: always()
         run: |
-          echo "status=failure" >> "${GITHUB_OUTPUT}"
-          exit 1
+          JOB_ID="${{ matrix.test.name }}"
+          STATUS=$([[ "${{ job.status }}" == "success" ]] && echo "pass" || echo "fail")
+          mkdir -p status
+          echo "$JOB_ID:$STATUS" > status/$JOB_ID.txt
+          echo "Saved: $JOB_ID = $STATUS"
+
+      - name: Upload status
+        id: status
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: status-${{ matrix.test.name }}
+          path: status/
 
   report:
     runs-on: k8s-nano
     needs: [ "e2e", "upgrade" ]
-    if: ${{ github.ref_name == 'main' && (needs.e2e.outputs.status == 'failure' || needs.upgrade.outputs.status == 'failure') }}
+    #if: ${{ github.ref_name == 'main' }}
     steps:
+      - name: Download all statuses
+        uses: actions/download-artifact@v4
+        with:
+          pattern: status-*
+          path: all-status/
+          merge-multiple: true
+
+      - name: Check results
+        run: |
+          echo "=== Tests Results ==="
+          FAILED_COUNT=0
+          for file in all-status/*.txt; do
+            if [ -f "$file" ]; then
+              RESULT=$(cat "$file")
+              echo "  $RESULT"
+              [[ "$RESULT" == *":fail" ]] && ((FAILED_COUNT++))
+            fi
+          done
+          echo ""
+          if [ $FAILED_COUNT -eq 0 ]; then
+            echo "🟢 OK"
+            echo "status=SUCCESS" >> $GITHUB_OUTPUT
+          else
+            echo "🔴 FAILED"
+            echo "status=FAILED" >> $GITHUB_OUTPUT
+          fi
       - name: Report Failure on slack
-        if: ${{ github.ref_name == 'main' && (needs.e2e.outputs.status == 'failure' || needs.upgrade.outputs.status == 'failure') }}
+        if: ${{ github.ref_name == 'main' && steps.report.outputs.status == 'FAILED' }}
         uses: ravsamhq/notify-slack-action@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -295,7 +336,7 @@ jobs:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
       - name: Report error on github UI
         run: |
-          if [ "${{ needs.e2e.outputs.status }}" == 'failure' || needs.upgrade.outputs.status == 'failure' ]
+          if [ "${{ steps.report.outputs.status }}" == 'FAILED' ]
           then
             exit 1
           fi
