--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -83,7 +83,7 @@ jobs:
         uses: ./.github/actions/find-tf-releases
         id: find
         with:
-          count: '3'
+          count: "3"
 
   list-examples:
     outputs:
@@ -101,12 +101,9 @@ jobs:
 
   # Run e2e tests
   e2e:
-    outputs:
-      status: ${{ steps.status.outputs.status }}
-    needs: [ "token", "find-tf-releases", "list-examples" ]
+    needs: ["token", "find-tf-releases", "list-examples"]
     runs-on: k8s-large
     environment: default
-    continue-on-error: true
     permissions:
       id-token: write
     strategy:
@@ -180,25 +177,15 @@ jobs:
           azure_tenant_id: ${{ secrets.AZURE_TENANT_ID }}
           azure_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Mark error
-        id: status
-        if: failure()
-        run: |
-          echo "status=failure" >> "${GITHUB_OUTPUT}"
-          exit 1
-
   upgrade:
-    outputs:
-      status: ${{ steps.status.outputs.status }}
-    needs: [ "token", "find-tf-releases", "list-examples" ]
+    needs: ["token", "find-tf-releases", "list-examples"]
     runs-on: k8s-large
     environment: default
-    continue-on-error: true
     permissions:
       id-token: write
     strategy:
       fail-fast: false
-      max-parallel: 10
+      max-parallel: 5
       matrix:
         tf_release: ${{ fromJSON(needs.find-tf-releases.outputs.releases) }}
         test: ${{ fromJSON(needs.list-examples.outputs.examples) }}
@@ -269,41 +256,29 @@ jobs:
           azure_tenant_id: ${{ secrets.AZURE_TENANT_ID }}
           azure_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Mark error
-        id: status
-        if: failure()
-        run: |
-          echo "status=failure" >> "${GITHUB_OUTPUT}"
-          exit 1
-
   report:
     runs-on: k8s-nano
-    needs: [ "e2e", "upgrade" ]
-    if: ${{ github.ref_name == 'main' && (needs.e2e.outputs.status == 'failure' || needs.upgrade.outputs.status == 'failure') }}
+    needs: ["e2e", "upgrade"]
+    if: always()
     steps:
       - name: Report Failure on slack
-        if: ${{ github.ref_name == 'main' && (needs.e2e.outputs.status == 'failure' || needs.upgrade.outputs.status == 'failure') }}
+        if: ${{ github.ref_name == 'main' && (needs.e2e.result == 'failure' || needs.upgrade.result == 'failure') }}
         uses: ravsamhq/notify-slack-action@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          status: 'failure'
+          status: "failure"
           notification_title: "E2E tests failed for {branch}"
           mention_groups: "S099W77RQ7J" # @on-call-terraform-provider
           mention_groups_when: "failure"
           footer: "{run_url}"
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
-      - name: Report error on github UI
-        run: |
-          if [ "${{ needs.e2e.outputs.status }}" == 'failure' || needs.upgrade.outputs.status == 'failure' ]
-          then
-            exit 1
-          fi
+
 
   # Delete any leftover service that might have failed deleting
   cleanup:
     runs-on: k8s-small
-    needs: [ "e2e", "upgrade", "token" ]
+    needs: ["e2e", "upgrade", "token"]
     if: always()
     continue-on-error: true
     steps:
